; ModuleID = '/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_mem.c_lsm_malloc.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/ext/lsm1/extr_lsm_mem.c_lsm_malloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @lsm_malloc(i32* %0, i64 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load i32*, i32** %3, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %9

7:                                                ; preds = %2
  %8 = load i32*, i32** %3, align 8
  br label %11

9:                                                ; preds = %2
  %10 = call i32* (...) @lsm_default_env()
  br label %11

11:                                               ; preds = %9, %7
  %12 = phi i32* [ %8, %7 ], [ %10, %9 ]
  %13 = load i64, i64* %4, align 8
  %14 = call i8* @lsmMalloc(i32* %12, i64 %13)
  ret i8* %14
}

declare dso_local i8* @lsmMalloc(i32*, i64) #1

declare dso_local i32* @lsm_default_env(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
